# bedrock-web-search-proxy

./: .env.example  .gitignore  Makefile  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  run.sh  template.yaml  test_api.py  test_stripper.py
.aws-sam/: build.toml
layer/: Makefile  requirements.txt
